--- a/CarInsuranceMVC/CarInsuranceMVC/Views/Home/Quote.cshtml
+++ b/CarInsuranceMVC/CarInsuranceMVC/Views/Home/Quote.cshtml
@@ -1,2 +1,2 @@
-﻿<h2>Success, this is a placeholder, don't forget to make this calculate the quote!</h2>
+﻿<h2>Success, this is a placeholder, don't forget to make this calculate the quote! Also go check and see if the database updated now before you forget</h2>
 
