--- a/CarInsuranceMVC/CarInsuranceMVC/Views/Admin/Index.cshtml
+++ b/CarInsuranceMVC/CarInsuranceMVC/Views/Admin/Index.cshtml
@@ -23,6 +23,9 @@
                             @quote.EmailAddress
                         </div>
                         <div class="col">
+                            @quote.Total
+                        </div>
+                        <div class="col">
                             <button type="submit" class="btn btn-danger btn-block">
                                 Remove
                             </button>
