--- a/CarInsuranceMVC/CarInsuranceMVC/Views/Home/Quote.cshtml
+++ b/CarInsuranceMVC/CarInsuranceMVC/Views/Home/Quote.cshtml
@@ -1,2 +1,13 @@
-﻿<h2>Success, this is a placeholder, don't forget to make this calculate the quote! Also go check and see if the database updated now before you forget</h2>
+﻿@using CarInsuranceMVC.Controllers
 
+<h2>Success, this is a placeholder, don't forget to make this calculate the quote! Also go check and see if the database updated now before you forget</h2>
+
+@{
+    if (IsPost)
+    {
+        int dateOfBirth = Convert.ToInt32(Request.Form["DateOfBirth"]);
+
+
+    }
+
+}
