change html to make directions more clear

--- a/FavoritePokemon/FavoritePokemon/Views/Home/Index.cshtml
+++ b/FavoritePokemon/FavoritePokemon/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
 <div class="row">
     <div class="col-md-4">
         <h2>Who the heck is your favorite Pokemon??</h2>
+        <h3>To begin, go ahead and click "Trainers" at the top of this page. From there, you can add, check the details of, edit, and delete any trainer listings.</h3>
         <p>This project was made with a lot of help from Microsoft's "Contoso University" sample code first application, so I feel like it'd almost be plagiarizing to not link to that here.</p>
         <p><a class="btn btn-default" href="http://www.asp.net/mvc/tutorials/getting-started-with-ef-using-mvc/">Check it out here</a></p>
     </div>
